--- a/css/test.css
+++ b/css/test.css
@@ -56,11 +56,11 @@ a{text-decoration: none; color: #333;}
 }
 #gnb>li>ul{
     display: flex;
-    left: 100%; 
+    left: 90%; 
     top: -2.5%;
     width: 0px;
     height: 105%;
-    z-index: 10;
+    z-index: 20;
     overflow: hidden;
     transition: 0.4s ease-in;
     padding-left: 1.1rem;
@@ -72,6 +72,7 @@ a{text-decoration: none; color: #333;}
 #gnb>li>ul>li>a{
     font-size: 15px;
     text-align: left;
+    color: #fff;
 }
 
 /* ?hover */
@@ -97,3 +98,39 @@ a{text-decoration: none; color: #333;}
     line-height: 2rem;
 }
 .content>li>ul>li>a>span{margin: 0 0 0 1rem;}
+
+.slide{opacity: 0; transition: 0.5s ease-in-out;}
+.opn{opacity: 0;}
+.op{opacity: 1 !important;}
+
+.banner>span{background-color: #333; left:-16px; top: 41%; width: calc(100% + 16px); height: 50%; transition: 0.5s ease-in;}
+
+.content2 span{margin-left: 2rem;}
+
+.footer ul>li{line-height: 3rem;}
+.footer ul>li>ul>li{margin-right: 2rem;}
+.footer h3{display: flex; flex-direction: column; justify-content: center; margin-right: 2rem;}
+
+.popup{
+    border: #333 1px outset;
+    background-color: rgb(255, 255, 255); 
+    left: 50%; 
+    top: 50%; 
+    width: 500px;
+    height: 400px;
+    translate:-50% -50%;
+}
+.popup h2{
+    padding: 0.7rem 0 0.7rem 0.7rem;
+    border-bottom: #333 1px outset;
+    text-align: left;
+}
+.popup p{
+    line-height: 2rem;
+    margin: 1rem;
+}
+.popup button{
+    position: absolute;
+    right: 0.5rem;
+    bottom: 0.5rem;
+}
